fix(pool): use stable NNTP provider IDs (#840)
(cherry picked from commit 665842e4f70f02a8e0ab5cde0cde32ed1c102583)
